HandsON/chapter5/mysql-phpmyadmin/openshift/mysql-phpmyadmin-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mysql-phpmyadmin-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mysql-phpmyadmin-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mysql-phpmyadmin-default: "true"
